--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="form">
         <div class="container">
             <div class="form_wrapper">
-                <svg viewBox="0 0 75 24" width="75" height="24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                <svg viewBox="0 0 75 24" width="75" height="24"
+                    xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                     class="l5Lhkf" style="">
                     <g id="qaEJec">
                         <path fill="#ea4335"
@@ -24,7 +25,8 @@
                             style=""></path>
                     </g>
                     <g id="YGlOvc">
-                        <path fill="#34a853" d="M58.193.67h2.564v17.44h-2.564z" style=""></path>
+                        <path fill="#34a853" d="M58.193.67h2.564v17.44h-2.564z"
+                            style=""></path>
                     </g>
                     <g id="BWfIk">
                         <path fill="#4285f4"
@@ -53,14 +55,16 @@
                     <!-- Field Name -->
                     <div class="fieldName section">
                         <div class="field">
-                            <input type="text" class="input_text input firstname_input" />
+                            <input type="text"
+                                class="input_text input firstname_input" />
                             <div class="sub_title">
                                 <span class="firstName">First Name</span>
                             </div>
                         </div>
 
                         <div class="field">
-                            <input type="text" class="input_text input lastname_input" />
+                            <input type="text"
+                                class="input_text input lastname_input" />
                             <div class="sub_title">
                                 <span class="lastName">Last Name</span>
                             </div>
@@ -74,7 +78,8 @@
                     <!-- Field username -->
                     <div class="username_section section">
                         <div class="field">
-                            <input type="text" class="input_text username_input input" />
+                            <input type="text"
+                                class="input_text username_input input" />
                             <div class="sub_title">
                                 <span class="username">Username</span>
                             </div>
@@ -83,7 +88,8 @@
                     </div>
                     <!-- note -->
                     <div class="note username_note">
-                        <span class="note_content">You can use letters, number & periods</span>
+                        <span class="note_content">You can use letters, number &
+                            periods</span>
                     </div>
 
                     <div class="btn_Container btn">
@@ -95,13 +101,16 @@
                     <!-- Field password -->
                     <div class="password_section section">
                         <div class="field">
-                            <input type="password" class="password1_input input" id="password1_input" />
+                            <input type="password" class="password1_input input"
+                                id="password1_input" />
                             <div class="sub_title">
-                                <span class="password1" id="password1">Password</span>
+                                <span class="password1"
+                                    id="password1">Password</span>
                             </div>
                         </div>
                         <div class="password2 field">
-                            <input type="password" class="password2_input input" id="password2_input" />
+                            <input type="password" class="password2_input input"
+                                id="password2_input" />
                             <div class="sub_title">
                                 <span>Confirm Password</span>
                             </div>
@@ -140,9 +149,11 @@
             <p class="working">working for you</p>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"
         integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <p>hgelo</p>
 </body>
 
 </html>
